fix input alignment on small screens

--- a/src/css/module/layout.less
+++ b/src/css/module/layout.less
@@ -100,4 +100,14 @@
     display: none;
   }
 
+  .wrapper-first {
+    margin-left: -15px;
+    margin-right: -15px
+  }
+
+  .wrapper-last {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+
 }
